# Achievement-Hunter

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  settings.rs  steam.rs
src/commands/: achievements.rs
tests/: settings.rs
