[package]
name = "achievement_hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
comfy-table = "7.1.1"
config = { version = "0.14.0", features = ["toml"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
